Remove Docker setup and simplify configurations
Removed Docker-related files (compose.yaml and Dockerfile) and updated application properties for local PostgreSQL usage. Applied minor refactorings in Java code for annotations and collection handling. Updated Gradle build script to remove unnecessary configurations and dependencies.